--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Sports Booking System</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="nav.css">
     <script src="nav.js"></script>
 
     <!-- Scripts for login and logout -->
@@ -89,8 +90,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            height: 90px !important;
-            min-height: 90px !important;
+            height: 90px;
             border-bottom: 1px solid #e0e6ed;
             position: fixed;
             top: 0;
@@ -108,7 +108,6 @@
             align-items: center;
             flex-shrink: 0;
             margin-right: 10px;
-            transition: none;
         }
 
         .logo img {
@@ -127,17 +126,21 @@
             padding: 0;
             flex-shrink: 0;
             align-items: center;
-            -webkit-overflow-scrolling: touch;
-            touch-action: pan-x;
             overflow-x: auto;
-            scrollbar-width: none;
-            -ms-overflow-style: none;
             white-space: nowrap;
             width: 100%;
             max-width: calc(100% - 120px);
             background-color: #0a2342;
             position: relative;
             z-index: 1000;
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+            -webkit-overflow-scrolling: touch;
+            touch-action: pan-x;
+            scroll-behavior: smooth;
+            will-change: transform;
+            transform: translateZ(0);
+            -webkit-transform: translateZ(0);
         }
 
         .main-nav::-webkit-scrollbar {
@@ -156,7 +159,7 @@
             font-size: 1rem;
             padding: 0.7rem 1.1rem;
             border-radius: 0.2rem;
-            transition: background 0.2s, color 0.2s;
+            transition: all 0.3s ease;
             white-space: nowrap;
             display: block;
             position: relative;
@@ -165,23 +168,19 @@
             background-color: transparent;
             user-select: none;
             -webkit-user-select: none;
+            touch-action: manipulation;
         }
 
         .main-nav a:hover {
             background-color: #17335c;
-            color: #e0e6ed;
-            box-shadow: none;
-            transform: none;
+            color: #ffffff;
+            transform: translateY(-1px);
         }
 
         .main-nav a.active {
             background-color: #17335c;
-            color: #e0e6ed;
-            box-shadow: none;
-        }
-
-        .main-nav a.active::after {
-            display: none;
+            color: #ffffff;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
         .hamburger {
@@ -209,30 +208,25 @@
         @media (max-width: 900px) {
             nav {
                 padding: 0.5rem;
-                background-color: #0a2342;
-                position: fixed;
-                width: 100%;
-                z-index: 9999;
-                overflow: hidden;
+                height: auto;
+                min-height: 90px;
+                overflow: visible;
             }
 
             .main-nav {
                 width: 100%;
                 overflow-x: auto;
                 overflow-y: hidden;
-                -webkit-overflow-scrolling: touch;
-                touch-action: pan-x;
                 padding: 0.5rem 0;
                 justify-content: flex-start;
                 gap: 0.2rem;
-                scrollbar-width: none;
-                -ms-overflow-style: none;
-                white-space: nowrap;
-                display: flex;
-                flex-wrap: nowrap;
                 background-color: #0a2342;
                 position: relative;
                 z-index: 10000;
+                touch-action: pan-x;
+                -webkit-overflow-scrolling: touch;
+                scroll-behavior: smooth;
+                will-change: transform;
                 transform: translateZ(0);
                 -webkit-transform: translateZ(0);
             }
@@ -249,31 +243,21 @@
             .main-nav a {
                 padding: 0.5rem 0.8rem;
                 font-size: 0.95rem;
-                white-space: nowrap;
-                display: inline-block;
-                background-color: transparent;
-                border-radius: 4px;
-                margin: 0 2px;
-            }
-
-            .main-nav a:hover, .main-nav a.active {
-                background-color: #17335c;
-                color: #e0e6ed;
+                touch-action: manipulation;
             }
 
             .logo {
                 margin: 0 auto;
                 padding: 5px 0;
-                z-index: 10000;
             }
 
             .logo img {
-                height: 80px;
-                width: 80px;
+                height: 60px;
+                width: 60px;
             }
 
             body {
-                padding-top: 140px;
+                padding-top: 90px;
             }
         }
 
@@ -281,16 +265,11 @@
             .main-nav a {
                 padding: 0.4rem 0.6rem;
                 font-size: 0.9rem;
-                margin: 0 1px;
             }
 
             .logo img {
-                height: 70px;
-                width: 70px;
-            }
-
-            body {
-                padding-top: 130px;
+                height: 50px;
+                width: 50px;
             }
         }
 
@@ -575,34 +554,47 @@
 
         @media (max-width: 900px) {
             body {
-                padding-top: 120px;
+                padding-top: 90px;
             }
         }
 
-        /* Add this to ensure proper scrolling behavior */
-        .main-nav {
-            scroll-behavior: smooth;
-            -webkit-overflow-scrolling: touch;
-            overscroll-behavior-x: contain;
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-            will-change: transform;
-            transform: translateZ(0);
-            -webkit-transform: translateZ(0);
-        }
-
-        .main-nav::-webkit-scrollbar {
-            display: none;
-        }
-
+        /* Add these new styles at the end of your CSS */
         @supports (-webkit-touch-callout: none) {
             .main-nav {
                 -webkit-overflow-scrolling: touch;
                 padding-bottom: 1px;
+                overflow-x: scroll;
+                scroll-snap-type: x mandatory;
+            }
+
+            .main-nav li {
+                scroll-snap-align: start;
             }
         }
 
-        /* Ensure the navigation is always visible */
+        /* Ensure proper scrolling behavior */
+        .main-nav {
+            scroll-snap-type: x mandatory;
+            overscroll-behavior-x: contain;
+            -webkit-overflow-scrolling: touch;
+            touch-action: pan-x;
+        }
+
+        .main-nav li {
+            scroll-snap-align: start;
+        }
+
+        /* Fix for iOS momentum scrolling */
+        @supports (-webkit-touch-callout: none) {
+            .main-nav {
+                -webkit-overflow-scrolling: touch;
+                padding-bottom: 1px;
+                overflow-x: scroll;
+                scroll-snap-type: x mandatory;
+            }
+        }
+
+        /* Ensure the navigation is always visible and scrollable */
         nav {
             position: fixed !important;
             top: 0 !important;
@@ -610,6 +602,13 @@
             right: 0 !important;
             z-index: 9999 !important;
             background-color: #0a2342 !important;
+            overflow: visible !important;
+        }
+
+        .main-nav {
+            overflow-x: auto !important;
+            -webkit-overflow-scrolling: touch !important;
+            scroll-behavior: smooth !important;
         }
     </style>
 </head>
@@ -750,6 +749,7 @@
     </script>
 </body>
 </html>
+
 
 
 
